# dbcrawler

./: CLAUDE.md  pyproject.toml
data/: input_urls.txt
dbms_vendor_analyzer/: config.py  main.py  prompts.py
dbms_vendor_analyzer/analysis/: ai_classifier.py  blog_detector.py  keyword_matcher.py  llm_client.py
dbms_vendor_analyzer/crawler/: extractor.py  fetcher.py  renderer.py
dbms_vendor_analyzer/models/: schema.py
dbms_vendor_analyzer/storage/: output.py  snapshots.py
prompts/: classify_ai.txt  select_blog.txt
tests/: fixtures.py  test_ai_classifier.py  test_blog_detector.py  test_extractor.py  test_keyword_matcher.py
