[project]
name = "dbcrawler"
version = "0.1.0"
description = "DBMS vendor web analyzer: blog detection and AI marketing classification"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "selectolax>=0.3",
    "trafilatura>=1.12",
    "tldextract>=5.1",
    "pydantic>=2.7",
    "playwright>=1.44",
    "aiofiles>=23.2",
    "tenacity>=8.3",
]

[project.scripts]
dbcrawler = "dbms_vendor_analyzer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dbms_vendor_analyzer"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-aiofiles>=23.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
